[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blood-bober"
version = "1.4.3"
description = "BloodBober - BloodHound Attack Path Analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
production = [
    "waitress>=3.0.0",
]

[project.scripts]
bloodbober = "bh_analyzer.__main__:main"
bh-analyzer = "bh_analyzer.__main__:main"

[tool.setuptools]
packages = ["bh_analyzer"]
